# Numpy_from_scratch

./: .gitignore  Agrregate-fn.py  Array-numpy1.py  Broadcasting-numpy.py  Filtering.py  Numpy-operation.py  README.md  Random_no.py  Scalar_numpy.py  operations-list-adv.py  practise.py  pyproject.toml  tempCodeRunnerFile.py
